UIUX-500: fix alignment and size of datetime combo input on record view

--- a/sugarcrm/styleguide/less/clients/base/components/record.less
+++ b/sugarcrm/styleguide/less/clients/base/components/record.less
@@ -473,8 +473,8 @@
       }
       .error {
         .input-append {
-            position:static;
-            font-size: inherit;
+          position: static;
+          font-size: inherit;
         }
         .add-on.error-tooltip {
           position: absolute;
@@ -499,22 +499,22 @@
       }
     }
 
+    &[data-type="datetimecombo"],
     &[data-type="fieldset"] {
       .normal > span {
         display: block !important;
         padding: 0;
       }
       .input-append.date {
-        display: block !important;
-        margin-top: -7px;
-
+        //display: block !important;
+        //margin-top: -7px;
         input[type="text"] {
           width: 95px;
           //margin: -6px 4px 0 -7px;
         }
         .add-on {
           z-index: 2;
-          padding: 9px 7px 5px 0;
+          padding: 5px 7px 5px 0;
           margin: 0 10px 0 -20px;
           width: 12px;
           height: 12px;
